<?xml version="1.0" encoding="utf-8"?>

<!--侧边栏-->
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/other"
        android:checkableBehavior="single">

        <item
            android:id="@+id/nav_search"
            android:checkable="false"
            android:icon="@drawable/ic_menu_search_theme"
            android:title="@string/menu_search" />
        <item
            android:id="@+id/nav_rule_manager"
            android:checkable="false"
            android:icon="@drawable/ic_nav_rule_manager"
            android:title="@string/rule_manager" />
    </group>

    <group
        android:id="@+id/setting"
        android:checkableBehavior="none">
        <item
            android:id="@+id/nav_feedback"
            android:checkable="false"
            android:icon="@drawable/ic_nav_feedback"
            android:title="@string/feedback" />
        <item
            android:id="@+id/nav_about"
            android:checkable="false"
            android:icon="@drawable/ic_nav_about"
            android:title="@string/menu_about" />
    </group>


</menu>
